uuf debugger profiler bar alignment, tooltip defec, code formatting fixed

--- a/components/uuf-core/src/main/resources/apps/debug/public/css/debug.css
+++ b/components/uuf-core/src/main/resources/apps/debug/public/css/debug.css
@@ -7837,7 +7837,7 @@ ul.sidebar-messages > li {
     padding:0px;
 }
 .vis-item .custom-vis-item-content{
-    padding:6px;
+    padding:3px 6px;
 }
 .vis-item.vis-range .custom-vis-item-content{
     text-shadow: 0px 0px 2px rgba(0, 0, 0, 1);
@@ -7846,7 +7846,7 @@ ul.sidebar-messages > li {
   overflow: visible;
 }
 .vis-item.vis-range {
-    font-size:0px;
+    font-size:11px;
     border-width:0px;
     background: #333;
     color:#fff;
@@ -7869,33 +7869,8 @@ ul.sidebar-messages > li {
     color:#333;
     height:100%!important;
 }
-.vis-custom-time{
-    background-color:#F62459;
-    width:1px;
-}
-.vis-timeline{
-    //border:none;
-}
 .vis-foreground .vis-group{
     border:none;
-}
-.lvl-1 .vis-item.vis-range{
-    background-color: #3498db;
-}
-.lvl-1.vis-label{
-
-}
-.lvl-2 .vis-item.vis-range{
-  background-color: #63B0E3;
-}
-.lvl-2.vis-label{
-
-}
-.lvl-3 .vis-item.vis-range{
-  background-color: #97CAED;
-}
-.lvl-3.vis-label{
-
 }
 .vis-labelset .vis-label .vis-inner{
     padding-right:20px;
@@ -7937,6 +7912,7 @@ ul.sidebar-messages > li {
 .vis-labelset .vis-label:first-child .right-label{
     font-weight:bold;
 }
+
 .time-lbl{
     position: absolute;
     color:#ccc;
